--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
+    <link rel="icon"  href="/favicon-32x32.png" />
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dainius Genutis Portfolio</title>
   </head>
